<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ui_background">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="340dp"
        android:layout_height="500dp"
        android:background="@drawable/view_background"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/cancelButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/FacilityDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="       Facility Detail"
            android:textColor="@color/white"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.129"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/facilityName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="46dp"
            android:text="Facility Name: "
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.047"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/EventDetail" />

        <TextView
            android:id="@+id/facilityID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="26dp"
            android:text="Facility ID: "
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.046"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/EventName" />

        <!--        <TextView-->
<!--            android:id="@+id/ViolatedPolicies"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="6dp"-->
<!--            android:layout_marginTop="16dp"-->
<!--            android:text="Violated Policies: "-->
<!--            android:textColor="@color/text_color"-->
<!--            android:textSize="20sp"-->
<!--            android:textStyle="italic"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintHorizontal_bias="0.056"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/EventDate" />-->

<!--        <TextView-->
<!--            android:id="@+id/Evidence"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="6dp"-->
<!--            android:layout_marginTop="16dp"-->
<!--            android:text="Evidence: "-->
<!--            android:textColor="@color/text_color"-->
<!--            android:textSize="20sp"-->
<!--            android:textStyle="italic"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintHorizontal_bias="0.052"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/MaxEntrants" />-->


    </LinearLayout>

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="68dp"
        android:backgroundTint="#40484D"
        android:text="BACK"
        app:icon="@drawable/return_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Deletebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="68dp"
        android:backgroundTint="#40484D"
        android:text="Delete"

        app:icon="@drawable/delete_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>