...
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginBottom="28dp"
        android:backgroundTint="#000000"
        android:text="Image"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/QRCodeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/QRCodeButton"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginBottom="28dp"
        android:backgroundTint="#000000"
        android:text="QR Code"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/DetailButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/DetailButton"
...
