<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/QRcode"
        android:layout_width="255dp"
        android:layout_height="255dp"
        android:contentDescription="QR Code"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.407" />

    <Button
        android:id="@+id/back_in_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="76dp"
        android:layout_marginBottom="104dp"
        android:backgroundTint="#40484D"
        android:text="BACK"
        app:icon="@drawable/return_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginEnd="76dp"
        android:layout_marginBottom="104dp"
        android:backgroundTint="#40484D"
        android:text="Delete"
        app:icon="@drawable/delete_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>