...
        android:text="Facility"
        android:fontFamily="casual"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="#C0C7CD"
        app:layout_constraintBottom_toTopOf="@+id/facilityList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <ListView
        android:id="@+id/facilityList"
...
        android:layout_marginRight="12dp"
        android:layout_marginTop="58dp"
        android:layout_marginBottom="70dp"
        android:background="@drawable/view_background"/>

    <Button
        android:id="@+id/refresh_button"
        android:layout_width="67sp"
        android:layout_height="40sp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#40484D"
        android:text="@string/about"
        app:icon="@drawable/refreshicon"
...
