...
        app:icon="@drawable/backicon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/organization"
        android:layout_width="175dp"
        android:layout_height="60dp"
        android:layout_marginTop="284dp"
        android:backgroundTint="@color/button_color"
        android:text="Organizer profile"
        android:textColor="@color/text_color"
...
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/entrant"
        android:layout_width="175dp"
        android:layout_height="60dp"

        android:layout_marginTop="12dp"
        android:backgroundTint="@color/button_color"
        android:text="Entrant profile"
...
