...
    android:layout_height="match_parent"

    android:background="@color/ui_background">


    <ListView
        android:id="@+id/organizer_list_view"

        android:layout_width="357dp"
        android:layout_height="536dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/view_background"
        app:layout_constraintBottom_toTopOf="@+id/back_in_organizer_list"
...
