...
    android:layout_height="match_parent"

    android:background="@color/ui_background">


    <ListView
        android:id="@+id/entrant_list_view"

        android:layout_width="357dp"
        android:layout_height="536dp"
        android:background="@drawable/view_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
